# asciinema-director

./: README.rst  TODO  pyproject.toml
asciinema_director/: __init__.py  __main__.py  cli.py  director.py
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
tests/: test_asciinema_director.py
