[tool.poetry]
name = "asciinema-director"
version = "0.1.1"
description = "A way to record asciinema cast files like a pro."
authors = ["Vinay Keerthi <ktvkvinaykeerthi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
asciinema = "^2.0"
pexpect = "^4.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
sphinx = "^2.2"
sphinx_rtd_theme = "^0.4.3"

[tool.poetry.scripts]
asciinema-director = 'asciinema_director:cli.cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
